fixed codeql permissions and build (#21)
* fixed codeql permissions and build

* Potential fix for code scanning alert no. 3: Workflow does not contain permissions (#22)

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Add explicit permissions to GitHub Actions workflow (#23)

* Initial plan

* Add permissions to workflow to fix security alert

Co-authored-by: yurkao <2091831+yurkao@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: yurkao <2091831+yurkao@users.noreply.github.com>

* disabled tests during codeql build

* Update codeql-analysis.yml

* make codeql external config

* make codeql external config

* make codeql external config

* make codeql external config

* make codeql external config

* make codeql external config

* java 17 fixes

* java 17 fixes

* Initial plan (#25)

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>

* Add language specification to CodeQL configuration file (#24)

* Initial plan

* Add language specification to CodeQL config file

Co-authored-by: yurkao <2091831+yurkao@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: yurkao <2091831+yurkao@users.noreply.github.com>

* Update .github/workflows/codeql-analysis.yml

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Upgrade CodeQL workflow and build settings

Updated CodeQL workflow to use actions/checkout@v3 and modified build mode settings.

* ignore transitive dependencies with known issues

* disable codeql

---------

Co-authored-by: yuriio-cye <yuri.oleynikov@cyesec.com>
Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>
Co-authored-by: Copilot <198982749+Copilot@users.noreply.github.com>
Co-authored-by: yurkao <2091831+yurka